--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.3'
 	implementation 'org.postgresql:postgresql:42.5.0'
 	implementation 'org.flywaydb:flyway-core:9.3.1'
 	compileOnly 'org.projectlombok:lombok'
